# Numc

./: .gitignore  CMakeLists.txt  README.md  mat_test.c  matrix.c  numc.c  setup.py  test.c
testing/: test.py  test_correctness.py  test_performance.py  utils.py
